[gd_scene load_steps=3 format=2]

[ext_resource path="res://puzzles/star.tscn" type="PackedScene" id=1]
[ext_resource path="res://puzzles/star_game.gd" type="Script" id=2]

[node name="star_game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -176.0
margin_top = -131.0
margin_right = 1089.0
margin_bottom = 688.0
mouse_filter = 2
color = Color( 0.0352941, 0.607843, 0.784314, 1 )

[node name="star_collection" type="Node2D" parent="."]

[node name="star" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 242, 221 )

[node name="star2" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 196, 359 )

[node name="star3" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 254, 473 )

[node name="star4" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 370, 523 )

[node name="star5" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 515, 489 )

[node name="star6" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 621, 403 )

[node name="star7" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 744, 406 )

[node name="star8" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 849, 413 )

[node name="star9" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 963, 409 )

[node name="star10" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 961, 295 )

[node name="star11" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 847, 285 )

[node name="star12" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 741, 288 )

[node name="star13" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 635, 282 )

[node name="star14" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 579, 186 )

[node name="star15" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 462, 145 )

[node name="star16" parent="star_collection" instance=ExtResource( 1 )]
position = Vector2( 344, 145 )

[node name="star17" parent="." instance=ExtResource( 1 )]
position = Vector2( 395, 317 )

[node name="star18" parent="." instance=ExtResource( 1 )]
position = Vector2( 820, 133 )

[node name="star19" parent="." instance=ExtResource( 1 )]
position = Vector2( 760, 532 )

[node name="star20" parent="." instance=ExtResource( 1 )]
position = Vector2( 172, 548 )

[node name="star21" parent="." instance=ExtResource( 1 )]
position = Vector2( 118, 133 )

[node name="star22" parent="." instance=ExtResource( 1 )]
position = Vector2( 598, 89 )

[node name="star23" parent="." instance=ExtResource( 1 )]
position = Vector2( 109, 263 )

[node name="star24" parent="." instance=ExtResource( 1 )]
position = Vector2( 619, 559 )

[node name="star25" parent="." instance=ExtResource( 1 )]
position = Vector2( 958, 552 )

[node name="star26" parent="." instance=ExtResource( 1 )]
position = Vector2( 961, 113 )

[node name="star27" parent="." instance=ExtResource( 1 )]
position = Vector2( 243, 84 )

[node name="star28" parent="." instance=ExtResource( 1 )]
position = Vector2( 103, 401 )

[node name="star29" parent="." instance=ExtResource( 1 )]
position = Vector2( 526, 320 )

[node name="Button" type="Button" parent="."]
margin_left = 22.0
margin_top = 15.0
margin_right = 87.0
margin_bottom = 48.0
text = "back"

[node name="StarTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="StarTimer" to="." method="_on_StarTimer_timeout"]
